--- a/src/Morpheus.API/project.json
+++ b/src/Morpheus.API/project.json
@@ -16,12 +16,15 @@
 		"Microsoft.Extensions.Logging.Console": "1.1.0",
 		"Microsoft.Extensions.Logging.Debug": "1.1.0",
 		"Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",
-		"Microsoft.NETCore.App": "1.1.0",
 		"Serilog.Extensions.Logging.File": "1.0.0",
 		"MySql.Data.EntityFrameworkCore": "7.0.6-IR31",
 		"Swashbuckle.AspNetCore": "1.0.0-rc1",
 		"Microsoft.AspNetCore.Authentication.JwtBearer": "1.1.0",
-		"Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.1.0-preview4-final"
+		"Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.1.0-preview4-final",
+		"Microsoft.NETCore.App": {
+			"version": "1.1.0",
+			"type": "platform"
+		},
 	},
 
 	"tools": {
@@ -29,7 +32,7 @@
 	},
 
 	"frameworks": {
-		"netcoreapp1.0": {
+		"netcoreapp1.1": {
 			"imports": [
 				"dotnet5.6"
 			]
