--- a/src/Morpheus.DB/project.json
+++ b/src/Morpheus.DB/project.json
@@ -2,11 +2,11 @@
 	"version": "1.0.0-*",
 
 	"dependencies": {
-		"NETStandard.Library": "1.6.0",
+		"NETStandard.Library": "1.6.0"
 	},
 
 	"frameworks": {
-		"netcoreapp1.0": {
+		"netcoreapp1.1": {
 			"imports": [
 				"dotnet5.6"
 			]
